fud2/fud-core/tests/plan_files/snapshots/tests__plan_files__trailing_comma_in_vars.snap
---
source: fud2/fud-core/tests/plan_files/mod.rs
expression: e.to_string()
---
expected <id> but found =
