fud2/fud-core/tests/plan_files/snapshots/tests__plan_files__underscores.snap
---
source: fud2/fud-core/tests/plan_files/mod.rs
expression: ast
---
AssignmentList {
    assigns: [
        Assignment {
            vars: [
                "__",
            ],
            value: Function {
                name: "_hello__",
                args: [
                    "_Ð",
                ],
            },
        },
    ],
}
