fud2/fud-core/tests/plan_files/snapshots/tests__plan_files__unicode_ids.snap
---
source: fud2/fud-core/tests/plan_files/mod.rs
expression: ast
---
AssignmentList {
    assigns: [
        Assignment {
            vars: [
                "Æ",
            ],
            value: Function {
                name: "Ë",
                args: [
                    "Ð",
                ],
            },
        },
    ],
}
